--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "0.29.0",
+    "@orca-so/sdk": "1.2.26",
+    "@orca-so/whirlpools-sdk": "0.11.7",
+    "@scure/base": "1.1.3",
+    "@solana/web3.js": "1.87.6",
+    "decimal.js": "10.4.3",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.4"
